<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/btn"
    tools:context=".Register">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="36dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:text="@string/rejestracja"
        android:textColor="#fff"
        android:textSize="32sp"
        android:textStyle="italic"
        android:id="@+id/register"/>
    <ImageView
        android:id="@+id/icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/register"
        android:layout_centerHorizontal="true"
        android:src="@drawable/register"
        android:contentDescription="@string/image_register" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/icon"
        android:orientation="vertical"
        android:padding="6dp">

        <EditText
            android:id="@+id/namev2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_box"
            android:elevation="2dp"
            android:hint="@string/name_user"
            android:inputType="text"
            android:padding="20dp"
            tools:targetApi="lollipop"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/emailv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_box"
            android:elevation="2dp"
            android:hint="@string/email_name"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            tools:targetApi="lollipop"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/passwordv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_box"
            android:elevation="2dp"
            android:hint="@string/password_name"
            android:inputType="textPassword"
            android:padding="20dp"
            tools:targetApi="lollipop"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/confirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_box"
            android:elevation="2dp"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:padding="20dp"
            tools:targetApi="lollipop"
            android:importantForAutofill="no" />


    </LinearLayout>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:indeterminate="true"
        android:visibility="gone"
        android:layout_margin="20dp"
        android:id="@+id/progressBar"
        android:indeterminateTint="@color/colorPrimary"
        android:layout_above="@+id/registerBtn"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn"
        android:minWidth="120dp"
        android:text="@string/register"
        android:layout_above="@+id/login"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="4dp"
        android:text="@string/to_login"
        android:textColor="#fff"
        android:textStyle="bold" />


</RelativeLayout>