<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/btn"
    tools:context=".Login">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logowanie"
        android:textStyle="italic"
        android:textColor="#fff"
        android:textSize="32sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/header"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        android:src="@drawable/login"
        android:importantForAccessibility="no" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_box"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:height="48dp"
            android:hint="@string/email"
            android:id="@+id/emailv2"
            android:padding="10dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/passwordv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="8dp"
            android:height="48dp"
            android:background="@drawable/text_box"
            android:hint="@string/haslo"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            android:importantForAutofill="no" />
    </LinearLayout>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/colorPrimary"
        android:id="@+id/progressBar"
        android:layout_above="@+id/loginBtn"
        android:layout_centerHorizontal="true"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_margin="22sp"
        android:visibility="gone"
        android:indeterminate="true"
        tools:targetApi="lollipop" />
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/login"
    android:background="@drawable/btn"
    android:textColor="#fff"
    android:layout_above="@+id/signup"
    android:layout_centerInParent="true"
    android:layout_marginBottom="32dp"
    android:minWidth="120dp"
    android:id="@+id/loginBtn" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="4dp"
        android:text="@string/stworz_konto_zapisz_si"
        android:textColor="#fff"
        android:textStyle="bold" />

</RelativeLayout>