<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFD6B94E"
    tools:context=".Profile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/consLayout"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:background="@drawable/btn">

        <TextView
            android:id="@+id/coins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:drawableEnd="@drawable/coins"
            android:drawableRight="@drawable/coins"
            android:drawablePadding="8dp"
            android:textColor="#fff"
            android:textSize="18sp"
            android:text="@string/zero"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseCompatTextViewDrawableXml" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/profile"
            app:civ_border_color="#000"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/editImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="11dp"
            android:layout_marginLeft="11dp"
            android:background="@drawable/edit"
            android:contentDescription="@string/edit_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/profileImage"
            app:layout_constraintHorizontal_bias="0.607"
            app:layout_constraintStart_toEndOf="@+id/profileImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/nazwa"
            android:textColor="#fff"
            android:textSize="22sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileImage" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_gmail_com"
            android:textColor="#fff"
            android:textSize="22sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:layout_constraintVertical_bias="0.333" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_below="@id/consLayout"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zasady_korzystania_z_aplikacji"
            android:id="@+id/policy"
            android:padding="8dp"
            android:textSize="20sp"
            android:textStyle="italic"
            android:textColor="#fff"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:padding="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/btn"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wyloguj"
            android:id="@+id/logoutv2"
            android:padding="8dp"
            android:textSize="20sp"
            android:textStyle="italic"
            android:textColor="#fff"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:padding="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/btn"/>

    </LinearLayout>

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30sp"
        android:layout_marginLeft="30sp"
        android:layout_marginTop="30sp"
        android:layout_marginEnd="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginBottom="30sp"
        android:background="@drawable/btn"
        android:minWidth="180dp"
        android:text="@string/aktualizuj"
        android:visibility="gone"
        android:textColor="#fff" />
</RelativeLayout>