<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Plan">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plany_inwestycyjne_v2"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:textColor="#FFC61B"/>
    <ImageView
        android:id="@+id/yourImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/plan"
        android:layout_marginBottom="16dp"
        android:importantForAccessibility="no" />

    <EditText
        android:id="@+id/planEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/wprowad_swoje_plany_inwestycyjne"
        android:minHeight="48dp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zapisz_plan"
        android:background="@drawable/btn"
        android:minWidth="300dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="60dp"/>

    <ListView
        android:id="@+id/plansListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>