<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/idCurrencyv1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardBackgroundColor="#B59E25"
    app:cardCornerRadius="12dp"
    app:cardElevation="3dp">
    <RelativeLayout
        android:id="@+id/idCurrencyv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/Symbol"
            android:layout_width="248dp"
            android:layout_height="35dp"
            android:layout_marginLeft="2dp"
            android:layout_toStartOf="@id/Rate"
            android:layout_toLeftOf="@id/Rate"
            android:padding="3dp"
            android:text="@string/symbol"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="2dp" />

        <TextView
            android:id="@+id/Name"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/Symbol"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:minHeight="20dp"
            android:padding="3dp"
            android:text="@string/nazwakrypto"
            android:textColor="#fff"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/Rate"
            android:layout_width="136dp"
            android:layout_height="63dp"
            android:layout_below="@id/Symbol"
            android:layout_centerInParent="true"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="-36dp"
            android:layout_toEndOf="@id/Name"
            android:layout_toRightOf="@id/Name"
            android:padding="3dp"
            android:text="@string/_123456"
            android:textColor="#fff"
            android:textSize="26sp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>